force-app/main/default/objects/SVMXA360__CONF_DepotFinderRule__c/SVMXA360__CONF_DepotFinderRule__c.object-meta.xml
<CustomObject>
    <description>Stores the configuration for Depot Management.</description>
    <label>Depot Finder Rule</label>
    <nameField>
        <displayFormat>DF-{000000}</displayFormat>
        <label>Depot Finder Rule Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Depot Finder Rules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>