force-app/main/default/objects/SVMXA360__CONF_DepotFinderRule__c/fields/SVMXA360__DeveloperName__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__DeveloperName__c</fullName>
    <description>A unique name generated for a record.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Developer Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>