force-app/main/default/objects/SVMXA360__CONF_DepotFinderRule__c/fields/SVMXA360__EnableDepotFinder__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__EnableDepotFinder__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Enables or disables Depot Management feature to use. True indicates Enabled.</description>
    <label>Enable Depot Finder</label>
    <type>Checkbox</type>
</CustomField>