force-app/main/default/objects/SVMXA360__CONF_DepotFinderRule__c/fields/SVMXA360__LocationServiceFieldAPIName__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__LocationServiceFieldAPIName__c</fullName>
    <description>The value provided in this field will be used to get the matching location/depot along with the value of the field provided in the Source Field Name.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Matching Location Service Field</label>
    <length>250</length>
    <type>Text</type>
</CustomField>