force-app/main/default/objects/SVMXA360__CONF_DepotFinderRule__c/fields/SVMXA360__MatchProductAndFamily__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__MatchProductAndFamily__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If True, Product and Family will be considered while searching for a matching location or depot.</description>
    <label>Match Product and Family</label>
    <type>Checkbox</type>
</CustomField>