force-app/main/default/objects/SVMXA360__CONF_DepotFinderRule__c/fields/SVMXA360__ObjectAPIName__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__ObjectAPIName__c</fullName>
    <description>The name of the source object for which a matching location or depot needs to be found.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Object Name</label>
    <length>150</length>
    <type>Text</type>
</CustomField>