force-app/main/default/objects/SVMXA360__CONF_DepotFinderRule__c/fields/SVMXA360__ObjectMapping__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__ObjectMapping__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Object mapping to use, which is a mapping between Location to Return Order object.</description>
    <label>Object Mapping</label>
    <referenceTo>SVMXA360__CONF_ObjectMapping__c</referenceTo>
    <relationshipLabel>Depot Finder Rules</relationshipLabel>
    <relationshipName>Depot_Finder_Rules</relationshipName>
    <type>Lookup</type>
</CustomField>