force-app/main/default/objects/SVMXA360__CONF_DepotFinderRule__c/fields/SVMXA360__RuleScope__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__RuleScope__c</fullName>
    <description>Indicates which rule is applicable for Depot Management.</description>
    <label>Rule Scope</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Global</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>