force-app/main/default/objects/SVMXA360__CONF_DepotFinderRule__c/fields/SVMXA360__SourceFieldAPIName__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__SourceFieldAPIName__c</fullName>
    <description>This field will have the API name of the source record whose value needs to be used along with the field API name provided in the Matching Location Service field to get the matching Location or Depot.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Source Field Name</label>
    <length>250</length>
    <type>Text</type>
</CustomField>